[package]
name = "p2p-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.18"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
rand = "0.7.0"
serde = "1.0.152"
serde_json = "1.0.93"
sha2 = "0.10.6"
